# literate-org

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  ARCHITECTURE.org  CLAUDE.md  Makefile  README.md  README.org  core.html  dev.ipynb  dev.py  draft.org  index.html  literate-org.org  literate-python.org  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  start-server.sh  test.ipynb  vulture_whitelist.py
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: block-tangled-edit.sh  tangle-org-buffer.sh
.claude/rules/: code-quality-over-feature.md  literate-org-document-first.md  no-auto-commit.md
.github/workflows/: ci.yml
commands/: lp-check.md  lp-cowork-review.md  lp-research-audit.md
docs/: agent-native-phenomena.org  config.org  cowork-research.org  lp-resync-runbook.org  tangle-map-schema.org  transfer-gradient.org
examples/meta-repo/: CLAUDE.md  README.md
examples/plugin-consumer/: CLAUDE.md  README.md
hints/: README.org  cowork-failure-modes.org  dual-audience-checklist.org  elisp.org  python.org
hooks/: README.md  block-bare-star-in-src.sh  block-bash-tangle-write.sh  block-tangled-edit.sh  hooks.json  post-tool-use-resync.py  tangle-org-buffer.sh  test_cross_project.py  test_hooks.sh  warn-oversized-atomic-src.sh
hooks/lib/: __init__.py  tangle_lookup.py
literate-org/: .gitignore  ARCHITECTURE.org  INDEX.org  MANIFEST.in  Makefile  README.org  dev.py  literate-org.org  pyproject.toml
literate-org/literate_python/: loader.py  reloader.py  server.py
literate-org/scripts/: check_nl_outline.py
literate-org/tasks/: lessons.md
literate-org/tests/: run-tests.el
literate_python/: __about__.py  __main__.py  _modidx.py  core.py  sections.py  server.py
literate_python/tests/: test_hot_reload.py
lpy/: loader.py  server.py
nbs/: index.ipynb  nbdev.yml
research/: RESEARCH-AGENT-NATIVE-PHENOMENA.org  RESEARCH-HUMAN-INTERFACE-TRANSFERS.org  RESEARCH-LP-COWORK-TRANSFERS.org
rules/: code-clarity-over-features.md  design-stays-in-org.md  factory-only-construction.md  literate-programming-document-first.md  lp-agent-capability-aware-task-assignment.md  lp-agent-convergent-regression-defence.md  lp-agent-internal-citation-verification.md  lp-agent-long-horizon-audit-cadence.md  lp-agent-multi-agent-coordination.md  lp-agent-persistence-hooks.md  lp-autonomy-levels.md  lp-comma-escape-leading-star.md  lp-cowork-anti-sycophancy.md  lp-cowork-boundary-object-evolution.md  lp-cowork-genre-conformance.md  lp-cowork-handoff-template.md  lp-cowork-persistence-stack.md  lp-cowork-propose-before-edit.md  lp-cowork-review-expectation.md  lp-cowork-stake-declaration.md  lp-cross-file-link-form.md  lp-load-bearing-affordances-structural.md  lp-module-section-hierarchy.md  lp-noweb-for-big-blocks.md  lp-noweb-narrative-embedding.md  lp-prose-no-self-narration.md  lp-purge-deleted-files-first.md  lp-resync-metadata.md  lp-resync-noweb-discipline.md  lp-stable-anchors-for-multi-referenced-sections.md  lp-transfer-discipline-no-weak-metaphors.md  naming-conventions.md  no-bare-except.md  no-speculative-generality.md  oop-smalltalk-protocols.md  org-mode-docs-first.md  package-root-policy.md  placeholder-convention.md  prefer-model-validate.md  prefer-pydantic-over-dataclass.md  (+2 more)
scripts/: __init__.py  audit_anchor_coverage.py  audit_lp_sync_metadata.py  audit_tangle_drift.py  backfill_anchors.py  build_index.py  build_overviews.py  build_readme.py  build_tangle_map.py  check_org_structure.py  load_config.py  lp_protocol_verify.py  lp_sync_bootstrap.py  lp_sync_engine.py  measure-docs-first.sh
skills/audit-prose/: SKILL.md
skills/docs-first/: SKILL.md
tasks/: lessons.md
templates/: Makefile.lp.mk  build_index_groups.toml  build_index_preamble.md  new-module.org
(+21 files in other folders)
