[tool.poetry]
name = "literate-python"
version = "0.1.0"
description = "Develop Python modules in Org files."
authors = ["Jingtao Xu <jingtaozf@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
marimo = "^0.8.7"
openai = "^1.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
