
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "literate_python"
description = "Develop Python modules in Org files."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Jingtao Xu", email = "jingtao@mind.ai" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
# We try to keep dependencies to a minimum, to avoid conflicts with
# user environments;we need a very compelling reason for each dependency added.
# Dependencies should have lower bounds, which should be as loose as possible.
dependencies = [
    "flask",
    "orgparse",
    "multimethod",
]

[project.urls]
Documentation = "https://github.com/jingtaozf/literate-org#readme"
Issues = "https://github.com/jingtaozfliterate-org/issues"
Source = "https://github.com/jingtaozfliterate-org"

[tool.hatch.version]
path = "literate_python/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:literate_python}"

[tool.coverage.run]
source_pkgs = ["literate_python"]
branch = true
parallel = true
omit = [
  "literate_python/__about__.py",
]

[tool.coverage.paths]
literate_python = ["literate_python", "*/literate_python"]
tests = ["tests", "*/literate_python/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

